# MpRpc

./: .gitignore  CMakeLists.txt  README.md
example/: friend.pb.cc  friend.pb.h  friend.proto  user.pb.cc  user.pb.h  user.proto
example/callee/: CMakeLists.txt  friendservice.cpp  userservice.cpp
example/caller/: CMakeLists.txt  callfriendservice.cpp  calluserservice.cpp
src/: CMakeLists.txt
src/include/: lockqueue.h  logger.h  mprpcapplication.h  mprpcchannel.h  mprpcconfig.h  mprpccontroller.h  rpcprovider.h  zookeeper.h
src/src/: lockqueue.cpp  logger.cpp  mprpcapplication.cpp  mprpcchannel.cpp  mprpcconfig.cpp  mprpccontroller.cpp  rpcheader.pb.cc  rpcheader.pb.h  rpcheader.proto  rpcprovider.cpp  zookeeper.cpp
